Config custom report