@@ -1,25 +1,42 @@
 package com.yourcompany.base;
 
+import java.io.BufferedReader;
 import java.io.File;
 import java.io.IOException;
+import java.io.InputStreamReader;
 import java.net.ServerSocket;
 import java.net.URL;
+import java.text.DateFormat;
+import java.text.SimpleDateFormat;
 import java.time.Duration;
+import java.util.Arrays;
+import java.util.Date;
+import java.util.List;
 import java.util.concurrent.TimeUnit;
 
+import org.apache.commons.io.FileUtils;
+import org.apache.commons.lang3.StringUtils;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
+import org.openqa.selenium.OutputType;
+import org.openqa.selenium.TakesScreenshot;
 import org.openqa.selenium.remote.DesiredCapabilities;
+import org.openqa.selenium.remote.SessionId;
 import org.openqa.selenium.support.ui.WebDriverWait;
 import org.testng.Assert;
+import org.testng.ISuite;
+import org.testng.ITestContext;
+import org.testng.ITestResult;
+import org.testng.annotations.AfterMethod;
+import org.testng.annotations.AfterSuite;
 import org.testng.annotations.BeforeMethod;
 import org.testng.annotations.Parameters;
-
 import com.yourcompany.configuration.Configuration;
 import com.yourcompany.configuration.DevicesMode;
 import com.yourcompany.configuration.PropertyReader;
 import com.yourcompany.configuration.SystemVariable;
 import com.yourcompany.utilities.MobileConstants;
+import com.yourcompany.utilities.ReportUtils;
 import com.yourcompany.utilities.TestUtilities;
 
 import io.appium.java_client.AppiumDriver;
@@ -27,8 +44,9 @@ import io.appium.java_client.android.AndroidDriver;
 import io.appium.java_client.ios.IOSDriver;
 import io.appium.java_client.remote.MobileCapabilityType;
 import io.appium.java_client.service.local.AppiumDriverLocalService;
+import io.appium.java_client.service.local.AppiumServiceBuilder;
 
-public class BaseTest {
+public class BaseTest  {
 	public AndroidDriver androidDriver;
 	public IOSDriver iosDriver;
 	public WebDriverWait wait;
@@ -38,6 +56,10 @@ public class BaseTest {
 	private static final int APPIUM_PORT = 4723;
 	private static final int MAX_CONNECTION_ATTEMPTS = 5;
 	public static Logger logger = LogManager.getLogger(BaseTest.class);
+	
+	
+    
+
 	
 	public AppiumDriver getDriver() {
 		return this.androidDriver != null ? this.androidDriver : iosDriver;
@@ -60,7 +82,7 @@ public class BaseTest {
 		config = new PropertyReader().loadConfigurationByPropertyFile(SystemVariable.CURRENT_DIR.concat(SystemVariable.MAIN_RESOURCE + "/env/common.properties"));
 
 		File src = new File(SystemVariable.CURRENT_DIR.concat(SystemVariable.TEST_RESOURCE));
-		URL url = new URL(hub.concat(port).concat("/wd/hub"));
+		URL url = new URL(hub.concat(port));//.concat("/wd/hub"));
 		File myApp = new File(src, config.getApp());
 		DesiredCapabilities cap = new DesiredCapabilities();
 
@@ -84,7 +106,7 @@ public class BaseTest {
 		if (deviceMode.contains(DevicesMode.REAL.toString())) {
 			cap.setCapability(MobileCapabilityType.DEVICE_NAME, "Android Device");
 		} else if (deviceMode.contains(DevicesMode.EMULATOR.toString())) {
-			startEmulatorDevice(config.getDevice());
+//			startEmulatorDevice(config.getDevice());
 			cap.setCapability(MobileCapabilityType.DEVICE_NAME, config.getDevice());
 		}
 
@@ -109,42 +131,63 @@ public class BaseTest {
 	}
 
 	private void startEmulatorDevice(String deviceName) throws Exception {
-		String fullPath = SystemVariable.CURRENT_DIR
+		String batFile = SystemVariable.CURRENT_DIR
 				.concat(SystemVariable.MAIN_RESOURCE.concat("/env/startEmulator.bat"));
 		try {
 			logger.info("Starting emulator device, device name=" + deviceName);
-			Runtime.getRuntime()
-					.exec(new String[] { "cmd.exe", "/c", fullPath, SystemVariable.CURRENT_USER, deviceName });
-			TestUtilities.setDelayTime(1);
-			
+			Process p = Runtime.getRuntime().exec(new String[] {"cmd.exe", "/c", batFile, "minht", deviceName});
+			TestUtilities.setDelayTime(5);
+			BufferedReader br = new BufferedReader(new InputStreamReader(p.getErrorStream()));
+			String line;
+			while ((line = br.readLine()) != null) {
+				logger.error(line);
+			}
+			br.close();
 		} catch (Exception e) {
 			throw new Exception("        Can not execute startEmulator.bat");
 		}
 	}
 	
 //	@BeforeTest
-	public void killAllNodes() {
+	public void killAllNodes() throws Exception {
 		try {
 			Runtime.getRuntime().exec("taskkill /F /IM node.exe");
+			logger.info("    Killed all nodes");
 		} catch (IOException e) {
 			e.printStackTrace();
 		}
+		logger.info("==== Starting appium service automaticaly ====");
 		startAppiumServer();
-		
 	}
 	
-	private AppiumDriverLocalService startAppiumServer() {
-
-		// Check if appium server already started, do not start again
-		if (!isAppiumServerRunning(APPIUM_PORT)) {
-			service = AppiumDriverLocalService.buildDefaultService();
-			service.start();
+	private AppiumDriverLocalService startAppiumServer() throws Exception {
+		try {
+			File appiumJS = new File("C:\\Users\\minht\\AppData\\Roaming\\npm\\node_modules\\appium\\build\\lib\\main.js");
+			// Check if appium server already started, do not start again
+			if (!isAppiumServerRunning(APPIUM_PORT) && appiumJS != null) {
+				try {
+					AppiumDriverLocalService service = new AppiumServiceBuilder()
+							.withAppiumJS(appiumJS)
+							.withIPAddress("127.0.0.1")
+							.usingPort(APPIUM_PORT)
+							.build();
+					service.start();
+				} catch (Exception ex) {
+					logger.info("Start with appiumJS failed. Begin start with appium default service");
+					service = null;
+					service = AppiumDriverLocalService.buildDefaultService();
+					service.start();
+				}
+				
+				logger.info("==== Appium server started successful ====");
+			}
+			return service;
+		} catch (Exception e) {
+			throw new Exception("        !!!Appium server start failed");
 		}
-
-		return service;
 	}
 	
-	private boolean isAppiumServerRunning(int port) {
+	private  boolean isAppiumServerRunning(int port) {
 		boolean flag = false;
 		ServerSocket socket;
 		try {
@@ -159,4 +202,54 @@ public class BaseTest {
 		return flag;
 	}
 	
+	@AfterMethod(alwaysRun=true) 
+	public void tearDown(ITestResult result) throws Exception {
+		logger.info("=== Running on teardown ===");
+		switch(result.getStatus()) {
+		case ITestResult.SUCCESS:
+			logger.info("######      Test case:" + result.getMethod().getMethodName() + " PASSED      ######");
+			break;
+		case ITestResult.FAILURE:
+			logger.info("######      Test case:" + result.getMethod().getMethodName() 
+					+ " FAILED. Screenshot name " + takeScreenshot(getDriver(), result.getMethod().getMethodName()) + "      ######");
+			break;
+		case ITestResult.SKIP:
+			logger.info("######      Test case:" + result.getMethod().getMethodName() + " SKIPPED      ######");
+			break;
+		default:
+			logger.error("######      Test case:" + result.getMethod().getMethodName() + " has result not defined: " + result.getStatus() + "      ######");
+			break;
+		}
+	}
+	
+	public String takeScreenshot(AppiumDriver driver, String testMethod) throws IOException {
+		if (driver == null) {
+			logger.warn("Unable to take screenshot as driver is not initialized, methodName="
+					+ ((testMethod != null) ? testMethod : null));
+			return StringUtils.EMPTY;
+		}
+		byte[] content = ((TakesScreenshot) driver).getScreenshotAs(OutputType.BYTES);
+		File file = getScreenshotFile(testMethod, driver.getSessionId());
+		FileUtils.writeByteArrayToFile(file, content);
+		return file.getAbsolutePath();
+	}
+	
+	private static File getScreenshotFile(String testName, SessionId sessionId) throws IOException {
+		return new File(SystemVariable.CURRENT_DIR + File.separator + "screen-shots" + File.separator
+				+ getScreenshotName(testName, sessionId));
+	}
+
+	private static String getScreenshotName(String testName, SessionId sessionId) {
+		DateFormat dateFormat = new SimpleDateFormat("MM-dd-yyyy_hh.mm.ss");
+		return testName + "_" + dateFormat.format(new Date()) + "_" + sessionId + ".png";
+	}
+	
+	@AfterSuite(alwaysRun=true)
+	public void afterSuite(ITestContext context) throws Exception {
+		logger.info("*** Generating final report ***");
+		ReportUtils report = new ReportUtils();
+		List<ISuite> suites = Arrays.asList(context.getSuite());
+		report.generateReport(suites);
+	}
+
 }
